Revision history for DBIx-Perlish

NEXT
       sql() is now prototyped.

0.14  Tue Feb 13 16:32:50 2007
       Added post-if parse-time simple conditionals.
       Added interpolation of scalars in regular expresions.
       Added special handling of sysdate() in Oracle.
       Verbatim sql() in inserts.
       Verbatim sql() in query subs.
       Support expressions in return statements.

0.13  Fri Feb  9 12:28:20 2007
       Added an ability to return complete table (tab.*).
       Added two ways to specify table names at run-time.
       Added an ability to use $hash{const} and $hash->{const} as values.
       More tests.
       More docs.

0.12  Wed Feb  7 13:24:19 2007
       Documentation and makefile cleanup.

0.11  Wed Feb  7 12:38:38 2007
       Sub-queries can refer to tables in the outer scope.
       Translate "lc" and "uc" to "lower" and "upper", respectively.
       Added support to EXISTS-style sub-queries.
       Added support for SELECT DISTINCT.
       Added support for special labels syntax.

0.10  Tue Feb  6 09:46:58 2007
       Added support for simple funcalls.
       PadWalker module is now optional.
       Terms can stand by themselves.

0.09  Mon Feb  5 14:27:52 2007
       Added db_update().

0.08  Mon Feb  5 12:16:22 2007
       Added support of subselects on threaded perls.
       Regexes on older versions of SQLite made to work.
       Implemented db_insert().

0.07  Sun Feb  4 23:18:07 2007
       Added regex support for SQLite.
       Added support for "OR".

0.06  Sun Feb  4 19:07:15 2007
       Db_delete & delete implemented.
       Native regexes are used if supported by RDBMS.
       Case-insensitive regex matching supported.

0.05  Sat Feb  3 23:28:15 2007
       Subselects with <- syntax added.

0.04  Thu Feb  1 13:08:29 2007
       More docs.
       Added OO interface.
       Added init().
       Fixed parsing of the constants in perl 5.8.4.
       Added support for return ($u->id, foo => $z->name).