@@ -2,6 +2,7 @@ Revision history for DBIx-Perlish
 
 NEXT
        sql() is now prototyped.
+       Implemented union {} and intersect {}.
 
 0.14  Tue Feb 13 16:32:50 2007
        Added post-if parse-time simple conditionals.
